--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
       <section id="contact">
          <h1>This is Contact us! page</h1>
          <div class="form">
-            Enter your Name: <input type="text" placeholder="ex:Abc"/>
-            Enter your Email: <input type="text" placeholder="ex:abc@gmail.com" />
-            Enter your name: <input type="text" />
-            Enter your name: <input type="text" />
+            Enter your Name: <input type="text" placeholder="ex:Abc"/><br>
+            Enter your Email: <input type="text" placeholder="ex:abc@gmail.com" /><br>
+            Write us!: <input type="text" /><br>
          </div>
       </section>
       <script src="./Script/script.js"></script>
