Completed Contact box

--- a/index.html
+++ b/index.html
@@ -30,20 +30,23 @@
          </div>
       </header>
       <section id="home">
-         <h1>This is home page edited by Tejas and removed by vishal</h1>
+         <h1>This is home page </h1>
       </section>
       <section id="about">
-         <h1>This is about page edited by Tejas 2</h1>
+         <h1>This is about page </h1>
       </section>
       <section id="trainer">
          <h1>This is trainers page</h1>
       </section>
       <section id="contact">
-         <h1>This is Contact us! page</h1>
          <div class="form">
-            Enter your Name: <input type="text" placeholder="ex:Abc"/><br>
-            Enter your Email: <input type="text" placeholder="ex:abc@gmail.com" /><br>
-            Write us!: <input type="text" /><br>
+            <h2 class="txt"><u>Send a message!</u></h2>
+            <input type="text" placeholder="Your Name"/><br>
+            <input type="email" placeholder="Email" /><br>
+            <div class="area">
+               <textarea class="textarea" placeholder="Type your message here!"></textarea>
+            </div>
+            <button class="btn-1" type="submit">Send</button>
          </div>
       </section>
       <script src="./Script/script.js"></script>
