Changes in contact us page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <div class="area">
                <textarea class="textarea" placeholder="Type your message here!"></textarea>
             </div>
+            <div class="butn">
             <button class="btn-1" type="submit">Send</button>
+            <button class="btn-2" type="reset">Clear</button>
+         </div>
          </div>
       </section>
       <script src="./Script/script.js"></script>
